# rossum-xml-conversion

./: Dockerfile  README.md  pyproject.toml
tests/: test_convertor.py  test_export.py
xml_conversion/: main.py  settings.py  xml_utils.py
