[tool.poetry]
name = "xml-conversion"
version = "0.1.0"
description = ""
authors = ["eduardsubert <eduardsubert@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
fastapi = "^0.115.4"
uvicorn = "^0.32.0"
pydantic-settings = "^2.6.1"
httpx = "^0.27.2"
pydantic = "^2.9.2"
pydantic-extra-types = "^2.10.0"
pycountry = "^24.6.1"


[tool.poetry.group.test.dependencies]
pytest = "^8.3.3"
coverage = "^7.6.4"

[tool.poetry.group.dev.dependencies]
black = "^24.10.0"
isort = "^5.13.2"
mypy = "^1.13.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.mypy]
python_version = "3.12"
warn_return_any = true
warn_unused_configs = true
plugins = [
  "pydantic.mypy"
]

[tool.black]
line-length = 88
target-version = ['py312']

[tool.isort]
profile = "black"